--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
     "redux-immutable": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "save": "^2.3.2"
   },
   "scripts": {
